# disability-max-ratings-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/.github/: dependabot.yml
.github/workflows/: build_and_push_to_ecr.yml  continuous-integration.yml  dependabot-auto-merge.yml  release.yml  test-code.yml  update-dependencies.yml  update-poetry-lock.yml  update-pre-commit.yml
bruno/: collection.json
docs/: CONFIGURATION.md  commitizen.md
scripts/: README.md  dc_lookup_table_updater.py
src/: dev-requirements.txt  requirements.txt
src/python_src/: __init__.py  api.py  pull_api_documentation.py  pydantic_models.py
src/python_src/util/: logger.py  lookup_table.py
src/python_src/util/data/: Diagnostic Code Lookup Table.csv  table_version.py
tests/: conftest.py  test_api.py  test_lookup_table.py
